refactor: result filters handle list inputs instead of single Article